Remove 'Thêm trạng thái phiên' from footer

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </div>
     
     <footer class="text-center p-6 mt-8 text-slate-500 border-t border-slate-300">
-        <p>Cửa hàng VTNN Thành Nhân &copy; 2025 - Phiên bản 1.2 (Thêm trạng thái phiên)</p>
+        <p>Cửa hàng VTNN Thành Nhân &copy; 2025 - Phiên bản 1.2 </p>
     </footer>
 
 <script>
