--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Quản lý bán hàng - VTNN Thành Nhân (v1.2)</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     
     <style type="text/tailwindcss">
         @layer components {
