--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     </div>
                     <div>
                         <label for="customer-payment-method" class="font-medium text-gray-700 dark:text-slate-300 block mb-1">Hình thức thanh toán:</label>
-                        <input type="text" id="customer-payment-method" value="Chuyển khoản" class="input-base" />
+                        <input type="text" id="customer-payment-method" value="Tiền mặt" class="input-base" />
                     </div>
                     <div>
                         <label for="customer-mdvcqhns" class="font-medium text-gray-700 dark:text-slate-300 block mb-1">MDVCQHVNS:</label>
