--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = { darkMode: 'class' };
+    </script>
+
+    <style type="text/tailwindcss">
+        @layer components {
+        /* all your .btn-base etc. */
+    }
+  </style>
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#4f46e5"> <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
