--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phần mềm Quản lý bán hàng - VTNN Thành Nhân</title>
+    <title>Phần mềm Quản lý bán hàng - Cửa hàng VTNN Thành Nhân</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script>
     tailwind.config = {
@@ -197,7 +197,7 @@
       <h1 class="text-lg md:text-2xl font-semibold text-gray-900 dark:text-white tracking-tight">
         Phần mềm Quản lý bán hàng
       </h1>
-      <p class="text-sm text-gray-500 dark:text-slate-400 hidden sm:block">VTNN Thành Nhân</p>
+      <p class="text-sm text-gray-500 dark:text-slate-400 hidden sm:block">Cửa hàng VTNN Thành Nhân</p>
     </div>
   </div>
 
