--- a/index.html
+++ b/index.html
@@ -21,7 +21,23 @@
         /* all your .btn-base etc. */
     }
   </style>
+
     <link rel="manifest" href="/manifest.json">
+
+    <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker
+      .register('/service-worker.js')
+      .then((registration) => {
+        console.log('Service Worker registered with scope:', registration.scope);
+      })
+      .catch((error) => {
+        console.log('Service Worker registration failed:', error);
+      });
+  }
+    </script>
+
+
     <meta name="theme-color" content="#4f46e5"> <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
     <script>
