--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@
             </button>
         </div>
         <div class="space-y-3 text-gray-600 dark:text-slate-300">
-            <p><strong>Tên phần mềm:</strong> Phần mềm Quản lý bán hàng</p>
-            <p><strong>Đơn vị:</strong> Cửa hàng VTNN Thành Nhân</p>
+            <p><strong>Tên phần mềm:</strong> Phần mềm Quản lý bán hàng - Cửa hàng VTNN Thành Nhân</p>
+            <p><strong>Phát triển bởi:</strong> Cửa hàng VTNN Thành Nhân</p>
             <p><strong>Phiên bản:</strong> <span class="font-semibold text-indigo-600 dark:text-indigo-400">1.5</span></p>
             <p class="mt-4 pt-4 border-t dark:border-slate-700 text-sm">Phần mềm này giúp quản lý việc xuất hóa đơn bán hàng và theo dõi tồn kho trong ngày.</p>
         </div>
